# electric-stimulation

./: .gitignore  LEDclignotementV0.1.py  README.md  WaveGene.py  WaveGeneGUI.py  pyproject.toml  requirements.txt  wavegene_backend.py  wavegene_gui.py
.github/workflows/: publish_pypi.yml
electric_stimulation/: __init__.py  build_exe.py  experiment_io.py  led_pattern.py  run_trigger_generator_gui.py  trigger_generator_backend.py  trigger_generator_gui.py
