[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "electric_stimulation"
version = "0.2.1"
description = "NI-DAQmx pulse generator for electrical stimulation with PyQt5 GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Wireless Neural Interface Team"},
    {name = "Pierre He", email = "pierre.he@inserm.fr"},
]
keywords = ["DAQ", "NI-DAQmx", "electrical_stimulation", "pulse-generator", "PyQt5"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "PyDAQmx>=1.4",
    "PyQt5>=5.15",
]

[project.scripts]
wavegene = "electric_stimulation.wavegene_gui:main"
wavegene-build = "electric_stimulation.build_exe:main"

[project.urls]
Homepage = "https://github.com/WNIlabs/electric_stimulation"
Repository = "https://github.com/WNIlabs/electric_stimulation"
